# shinobi_not_sofia_alarm_client

./: .gitmodules  CMakeLists.txt  README.md
scripts/: config.txt  shinobi_not_sofia_alarm_client.service
src/: Application.cpp  Application.h  ClientConfig.cpp  ClientConfig.hpp  ClientConnection.cpp  ClientConnection.hpp  NotSofiaSession.cpp  NotSofiaSession.hpp  main.cpp
src/Config/: ClientConfig.cpp  ClientConfig.hpp  NotSofiaConfig.cpp  NotSofiaConfig.hpp
